--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "react-icons": "^4.6.0",
+    "typescript": "4.8.4",
+    "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "babel-eslint": "^10.1.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
