--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/eslint-parser": "^7.19.1",
     "@headlessui/react": "^1.7.4",
     "@headlessui/tailwindcss": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
