--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@headlessui/tailwindcss": "^0.1.1",
     "@smakss/react-scroll-direction": "^1.0.1",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "next": "13.0.2",
     "react": "18.2.0",
