--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "typescript": "4.8.4",
     "uuidv4": "^6.2.13"
