--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
+    "react-number-format": "^5.1.1",
     "typescript": "4.8.4",
     "uuidv4": "^6.2.13"
   },
