--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "jsforce": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "next": "13.0.2",
