--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "next": "13.0.2",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.3",
@@ -36,6 +37,7 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@types/pg": "^8.6.5",
     "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
     "postcss": "^8.4.18",
