--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ next-env.d.ts
 /.env
 /.env.development
 */.env.development
+
+App not compatible with buildpack: https://github.com/mars/heroku-nextjs.git
