--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "next": "13.0.2",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "18.2.0",
