--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.4",
     "@headlessui/tailwindcss": "^0.1.1",
     "@react-next-calendar/core": "^1.0.2",
+    "@sendgrid/mail": "^7.7.0",
     "@smakss/react-scroll-direction": "^1.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcryptjs": "^2.4.2",
@@ -43,10 +44,13 @@
     "react-number-format": "^5.1.1",
     "sweetalert2": "^11.6.13",
     "typescript": "4.8.4",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/pg": "^8.6.5",
+    "@types/react-big-calendar": "^0.38.2",
+    "@types/xml2js": "^0.4.11",
     "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
     "postcss": "^8.4.18",
