--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.11.9",
+    "@types/node-cron": "^3.0.6",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "axios": "^1.1.3",
@@ -34,6 +35,7 @@
     "mongoose": "^6.7.2",
     "next": "13.0.2",
     "next-auth": "^4.17.0",
+    "node-cron": "^3.0.2",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-big-calendar": "^1.5.2",
