--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
     "babel-eslint": "^10.1.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
+  },
+  "engines": {
+    "node":"14.17.6",
+    "npm":"8.1.4"
   }
 }
