--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "13.0.2",
     "jsforce": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "logrocket": "^3.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "next": "13.0.2",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "react-number-format": "^5.1.1",
+    "react-password-strength-bar": "^0.4.1",
     "sweetalert2": "^11.6.13",
     "typescript": "4.8.4",
     "uuidv4": "^6.2.13",
@@ -59,7 +61,7 @@
     "tailwindcss": "^3.2.2"
   },
   "engines": {
-    "node":"14.17.6",
-    "npm":"8.1.4"
+    "node": "14.17.6",
+    "npm": "8.1.4"
   }
 }
