--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ next-env.d.ts
 */.env.development
 
 App not compatible with buildpack: https://github.com/mars/heroku-nextjs.git
+
+/certs
+*/certs
