--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "mongoose": "^6.7.2",
     "next": "13.0.2",
     "next-auth": "^4.18.0",
-    "nprogress": "^0.2.0",
     "node-cron": "^3.0.2",
+    "nprogress": "^0.2.0",
     "pg": "^8.8.0",
     "picomatch": "^2.3.1",
     "postcss-selector-parser": "^6.0.11",
@@ -49,13 +49,14 @@
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.7.1",
     "react-number-format": "^5.1.1",
+    "react-password-strength-bar": "^0.4.1",
+    "react-toastify": "^9.1.1",
     "reusify": "^1.0.4",
     "run-parallel": "^1.2.0",
     "safe-buffer": "^5.2.1",
     "sift": "^16.0.1",
     "socks": "^2.7.1",
     "styled-jsx": "^5.1.0",
-    "react-password-strength-bar": "^0.4.1",
     "sweetalert2": "^11.6.13",
     "to-regex-range": "^5.0.1",
     "typescript": "4.8.4",
