--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "logrocket": "^3.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
+    "mouseflow": "^1.0.3",
     "next": "13.0.2",
     "next-auth": "^4.18.0",
     "node-cron": "^3.0.2",
